Address issue w/ right-margin when switching to/from portrait/landscape on iOS

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -13,6 +13,7 @@
  */
 
 *
+	color: #333
 	font-family: verdana, arial, helvetica, sans-serif
 	font-size: 100%
 	line-height: 1em
@@ -24,8 +25,6 @@ a
 		text-decoration: underline
 
 body
-	background-color: #FFF
-	color: #333
 	margin: 0
 	padding: 0
 	width: 100%
