--- a/app/assets/stylesheets/todos.css.sass
+++ b/app/assets/stylesheets/todos.css.sass
@@ -1,49 +1,52 @@
-.notepad
-	margin: 0px 10px
-	padding-top: 5px
-	.binding
-		background-color: #630
-		border-color: #777
-		border-style: solid
-		border-width: 1px 1px 0 1px
-		color: #FFF
-		font-size: 20px
-		font-weight: bold
-		padding: 7px 0
-		text-align: center
-	.lines
-		background-color: #FFC
-		border: solid 1px #777
-		width: 100%
-		tr
-			&:hover
-				background-color: #FAFAFA
-			&:not(:last-child) td
-				border-bottom: solid 1px #69F
-			td
-				&:first-child
-					text-align: center
-					width: 40px
-				&:nth-child(2)
-					border-left: solid 1px #F09
-					border-right: solid 1px #F09
-					width: 3px
-				&:nth-child(3)
-					padding: 5px 10px
-				input[type="text"]
-					background: none
-					border: none
-					outline: none
-					width: 100%
-	.status
-		background-color: #EEE
-		border: solid 1px #999
-		border-top-width: 0
-		margin: 0 10px
-		padding: 5px 0 8px 0
-		text-align: center
-		.selected
+#content
+	overflow-x: hidden
+	max-width: 1024px
+	.notepad
+		margin: 0px 10px
+		padding-top: 5px
+		.binding
+			background-color: #630
+			border-color: #777
+			border-style: solid
+			border-width: 1px 1px 0 1px
+			color: #FFF
+			font-size: 20px
 			font-weight: bold
+			padding: 7px 0
+			text-align: center
+		.lines
+			background-color: #FFC
+			border: solid 1px #777
+			width: 100%
+			tr
+				&:hover
+					background-color: #FAFAFA
+				&:not(:last-child) td
+					border-bottom: solid 1px #69F
+				td
+					&:first-child
+						text-align: center
+						width: 40px
+					&:nth-child(2)
+						border-left: solid 1px #F09
+						border-right: solid 1px #F09
+						width: 3px
+					&:nth-child(3)
+						padding: 5px 10px
+					input[type="text"]
+						background: none
+						border: none
+						outline: none
+						width: 100%
+		.status
+			background-color: #EEE
+			border: solid 1px #999
+			border-top-width: 0
+			margin: 0 10px
+			padding: 5px 0 8px 0
+			text-align: center
+			.selected
+				font-weight: bold
 
 
 @media screen and (max-width: 640px)
